# PAS_seminar

./: README.md
ASTRO/: README.md
ASTRO/astro/: package.xml
ASTRO/astro/config/: twist_mux.yaml
ASTRO/astro/description/: astro_stage.urdf.xacro  ros2_control_stage.xacro
ASTRO/astro/launch/: rsp.launch.py  rsp_stage.launch.py
ASTRO/astro/rviz/: view_robot.rviz
ASTRO/astro_navigation/: CMakeLists.txt  README.md  package.xml
ASTRO/astro_navigation/astro_navigation/: evo_analyzer.py  nav_benchmark_runner.py  nav_experiment_gui.py  nav_metrics_analyzer.py  robot_nav_benchmark_runner.py  robot_nav_experiment_gui.py
ASTRO/astro_navigation/config/: mapper_params_online_async.yaml  mapper_params_online_async_stage.yaml  nav2_params.yaml  nav2_params_stage.yaml
ASTRO/astro_navigation/launch/: localization.launch.py  localization_rviz.launch.py  localization_stage.launch.py  navigation.launch.py  navigation_stage.launch.py  slam_toolbox_online_async.launch.py
ASTRO/astro_navigation/map/: crta_mapa.pgm  crta_mapa.yaml
ASTRO/astro_navigation/rviz/: astro_online_async_rviz_config.rviz
Stage/: .gitignore
astro_bringup/: package.xml  setup.cfg  setup.py
astro_bringup/launch/: robot_bringup.launch.py  sim_bringup.launch.py
stage_ros2/: README.md
stage_ros2/config/rviz/: crta_stage.rviz
stage_ros2/launch/: rviz_stage.launch.py  sim_stage.launch.py
stage_ros2/res/: install.md
stage_ros2/world/: crta_mapa.world
stage_ros2/world/bitmaps/: crta_mapa.pgm  crta_mapa.xcf
stage_ros2/world/include/: astro.inc
(+18 files in other folders)
