<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>astro</name>
  <version>1.0.0</version>
  <description>ROS2 Humble package for interfacing with an ASTRO robot.</description>
  <maintainer email="andrija.adamov@gmail.com">AndrijaAdamovic</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>rviz2</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>robot_state_publisher</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>robot_localization</depend>
  <depend>imu_tools</depend>  
  <depend>twist_mux</depend>
  <depend>rmw_cyclonedds_cpp</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
